--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Convert coverage files
         run: |
           llvm-cov export -format="lcov" \
-            .build/debug/{{project}}PackageTests.xctest \
+            .build/debug/hummingbird-elementaryPackageTests.xctest \
             -ignore-filename-regex="\/Tests\/" \
             -ignore-filename-regex="\/Benchmarks\/" \
             -instr-profile .build/debug/codecov/default.profdata > info.lcov
